--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <h1> Assignment 2</h1>
   <!-- <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li> -->
+<!-- <li>Output the username property via String Interpolation (in a paragraph below the input)</li> -->
+ <!-- <li>Add a button which may only be clicked if the username is NOT an empty string</li> -->
+<!-- <li>Upon clicking the button, the username should be reset to an empty string</li> -->
+
+  <label>username</label>
   <input type="text" class="form-control" [(ngModel)]="username">
-  <!-- <li>Output the username property via String Interpolation (in a paragraph below the input)</li> -->
+  
   <p>{{username}}</p>
-  <!-- <li>Add a button which may only be clicked if the username is NOT an empty string</li> -->
-  <button class="btn btn-primary" (click)="onClickUser()"> click me</button>
-  <!-- <li>Upon clicking the button, the username should be reset to an empty string</li> -->
+ 
+  <button class="btn btn-primary" [disabled]==='' (click)="onClickUser()"> reset </button>
+  
 <h6> completed by sachin M</h6>
