--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
   
   <p>{{username}}</p>
  
-  <button class="btn btn-primary" [disabled]==='' (click)="onClickUser()"> reset </button>
+  <button class="btn btn-primary" [disabled]="username === '' "(click)="onClickUser()"> reset </button>
   
 <h6> completed by sachin M</h6>
